k8s/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-svc
  namespace: app
spec:
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
